--- a/app/style/SendPage.less
+++ b/app/style/SendPage.less
@@ -28,11 +28,6 @@
   padding-bottom: 1px;
 }
 
-// accounts-select is a class from AccountsSelect input component
-.accounts-select {
-  width: 100%;
-}
-
 .send-label {
   font-size: 19px;
   line-height: 24px;
