--- a/app/style/StakePool.less
+++ b/app/style/StakePool.less
@@ -19,6 +19,7 @@
   color: var(--stroke-color-hovered);
   display: flex;
   max-width: 740px;
+  justify-content: space-between;
 }
 
 .stakepool-add-area {
@@ -163,6 +164,9 @@
     width: 634px;
     grid-template-columns: auto 316px;
   }
+  .stakepool-add-title {
+    width: 634px;
+  }
   .stakepool-link-button-container{
     margin-left:0;
   }
@@ -180,8 +184,8 @@
     grid-template-columns: 1fr;
     width: 355px;
   }
-  .stakepool-add-title{
-    margin-left:16px;
+  .stakepool-add-title {
+    width: 355px;
     margin-bottom:20px;
   }
   .stakepool-add-toolbar {
